<resources>
    <string name="app_name">White Cab</string>
    <string name="welcome_to_whitecab">Welcome Back to \nWhite Cab</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot?</string>
    <string name="login">Log in</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="lets_ride">Let\'s ride with \nWhite Cab</string>
    <string name="your_name">Your Name</string>
    <string name="email">Email</string>
    <string name="create_password">Create password</string>
    <string name="show">Show</string>
    <string name="confirm_password">Confirm password</string>
    <string name="signing_term">By Signing up you agree to the </string>
    <string name="terms_service">Terms of Service</string>
    <string name="privacy_policy">and privacy policy</string>
    <string name="have_account">Already have an account?</string>
    <string name="hide">Hide</string>
    <string name="upload_documents">Upload Documents</string>
    <string name="profile_picture">Profile Picture*</string>
    <string name="add_profile">Add Profile Picture</string>
    <string name="driving_licence_front">Driving License  Front*</string>
    <string name="driving_licence_back">Driving License Back*</string>
    <string name="registration_book">Vehicle Registration Book Front*</string>
    <string name="complete_registration">complete registration</string>
    <string name="verify_otp">Enter the Code \nto Verify Your Phone</string>
    <string name="enter_pin">Enter the pin you have received via SMS</string>
    <string name="verify">verify</string>
    <string name="resend_code">Didn\'t receive the code? Resend Code</string>
    <string name="verification">Verification</string>
    <string name="verify_moblie">on   <b>  +1 8005619629 </b></string>
    <string name="offline">Offline</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="my_rides">My Rides</string>
    <string name="contact_us">Contact Us</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="about_text">Since 1926, White Cab has proudly provided the best local transportation service in Moncton. That sense of greatness has been the taxi company\'s driving force for the last 90 years and it will continue to fuel itscommitment to its customers for years to come. \n\nWith many years of experience and a team made up of
                              300 professional drivers, it is clear why White Cab was voted Moncton\'s number one cab company by the Readers Choice Awards. \nWe will Get You There! \nAt White Cab we take great pride in our customers loyalty What is why we go above and beyond to answer your local transportation needs, including: \nAirport service \nDelivery and courier \nOut of town trips \nOur fleet also includes wheelchair accessible vans.</string>
    <string name="name">Name</string>
    <string name="add_name">Add Name</string>
    <string name="add_email">Add Email</string>
    <string name="add_phone">Add Phone Number</string>
    <string name="message">Message</string>
    <string name="add_message">Add Message</string>
    <string name="submit">Submit</string>
    <string name="offers">Offers</string>
    <string name="wallet">Wallet</string>
    <string name="all">All</string>
    <string name="paid">Paid</string>
    <string name="added">Added</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="avilable_balance">Available Balance</string>
    <string name="add_money">Add money</string>
    <string name="paid_for_order">Paid for Order</string>
    <string name="sign_out">Sign Out</string>
    <string name="terms_condition">Terms and Conditions</string>
    <string name="app_version">App Version</string>
    <string name="change_password">Change Password</string>
    <string name="mail">Mail</string>
    <string name="mobile">Mobile</string>
    <string name="edit">Edit</string>
    <string name="profile">Profile</string>
    <string name="payment">Payment</string>
    <string name="saved_card">Saved Cards</string>
    <string name="add_card">Add Card</string>
    <string name="enter_card_details">Enter Your Card Details</string>
    <string name="name_on_card">Name on Card</string>
    <string name="card_type">Card Number</string>
    <string name="card_expiry">Card Expiry</string>
    <string name="cvv">CVV</string>
    <string name="save">Save</string>
    <string name="select_your_card">Select Your Card</string>
    <string name="pay_now">PAYNOW</string>
    <string name="cancelled">Cancelled</string>
    <string name="scheduled">Scheduled</string>
    <string name="completed">Completed</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="discount">Discount</string>
    <string name="cash">Cash</string>
    <string name="trip_fare">Trip Fare</string>
    <string name="trip_id"> Trip ID - </string>
    <string name="my_ride_details">My Ride Details</string>
    <string name="rating">Rating</string>
    <string name="ride_completed">Ride Completed</string>
    <string name="complaint">Complaint</string>
    <string name="give_rating">Give Rating</string>
    <string name="how_your_trip">How was your trip?</string>
    <string name="awesome">Awesome</string>
    <string name="what_you_love">Tell us what you loved</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="additional_comments">Additional Comments...</string>
    <string name="select_location">Select Location</string>
    <string name="white_cab">White Cab</string>
    <string name="from">From</string>
    <string name="choose_vehicle_type">Choose Your Vehicle Type</string>
    <string name="ride_now">Ride Now</string>
    <string name="ride_later">Ride Later</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="favorite_places">Favorite places</string>
    <string name="recently_visited">Recently visited places</string>
    <string name="booking">Booking</string>
    <string name="select_drop_location">Select Drop Off Location</string>
    <string name="get_estimation">To get estimation please enter the drop off location</string>
    <string name="promo_code">Promo Code</string>
    <string name="drop_off_location">Drop Off Location</string>
    <string name="drop_off">Dropoff</string>
    <string name="confirm_dropoff">Confirm Dropoff</string>
    <string name="book_now">Book Now</string>
    <string name="please_enter_promo">Please enter your promo code \nand save it on your ride</string>
    <string name="card">Card</string>
    <string name="wallet_amount">Wallet Amount</string>
    <string name="tracking">Tracking</string>
    <string name="change_trip">Change Trip</string>
    <string name="call_driver">Call Driver</string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="cancel_request">Cancel request</string>
    <string name="ride_confirmed">Ride Confirmed</string>
    <string name="you_will_notified">You will be notified \nwhen the Driver is on the way</string>
    <string name="ok">ok</string>
    <string name="general">General</string>
    <string name="rate_app">Rate the App</string>
    <string name="manage_cards">Manage Cards</string>
    <string name="report_cab_issue">Report White Cab Issue</string>
    <string name="send_report">Send Error Report</string>
    <string name="please_wait">Please wait...</string>
    <string name="no_data">No data Please check network connection</string>
    <string name="check_net_connection">Please check network connection</string>
    <string name="empty_select_car">Please select any Cab</string>
    <string name="time">Time</string>
    <string name="note_text">Note: This is an approximate estimate, Actual cost may be different due to traffic and waiting time</string>
    <string name="enter_your_name">Please Enter Your Name</string>
    <string name="enter_your_mail">Please Enter Your Email</string>
    <string name="enter_phone_number">Please Enter Your Phone Number</string>
    <string name="create_your_password">Please Create Your Password</string>
    <string name="confirm_your_password">Re-Enter Your Password</string>
    <string name="password_mismatch">Password and Confirm Password doesn\'t matched</string>
    <string name="enter_valid_mail">Enter Valid E-mail</string>
    <string name="empty_otp">Please Enter OTP</string>
    <string name="enter_your_pass">Enter Your Password</string>
    <string name="on">on</string>
    <string name="select_time">Select Time</string>
    <string name="enter_description">Enter a description</string>
    <string name="please_accept_terms">Please Accept Terms and Conditions</string>
    <string name="send">Send</string>
    <string name="empty_promocode">Please Enter Code</string>
    <string name="search_address_here">Search Your Address Here..</string>
    <string name="please_add_your_address">Please Add Your Address</string>
    <string name="empty_name">Please Enter Name</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm">Confirm</string>
    <string name="sure_signout">Do you want to Signout?</string>
    <string name="enter_old_pass">Enter your current password</string>
    <string name="update">Update</string>
    <string name="enter_your_current_pass">Enter your current password</string>
    <string name="create_new_password">Create new password</string>
    <string name="add_your_message">Please write your message</string>
    <string name="takeaphoto">take a photo</string>
    <string name="choosefrmgallery">choose from Gallery</string>
    <string name="add_photo">Add Photo</string>
    <string name="cancel">cancel</string>
    <string name="no_completed_rides">No Completed Rides</string>
    <string name="no_cancelled_rides">No Cancelled Rides</string>
    <string name="no_scheduled_rides">No Scheduled Rides</string>
    <string name="add_title">Add Title</string>
    <string name="min_six_characters">Password should contain minimum 6 characters</string>
    <string name="choose_valid_time">Choose Valid Time</string>
    <string name="please_select_reason">Please select your reason</string>
    <string name="capacity">Capacity</string>
    <string name="add_favourite_name">Add Favourite Name</string>
    <string name="choose_country_code">Choose your country code</string>
    <string name="forgot_password">Forgot Password?</string>
</resources>