<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


     <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            >


            <ImageView
                android:id="@+id/back_contact"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/one_five"
                android:padding="@dimen/five"
                android:layout_centerInParent="true"
                android:src="@drawable/back_black"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/contact_us"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_18sp"
                />


        </RelativeLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:id="@+id/ll_cat_f"
            android:layout_margin="@dimen/ten_dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ten_dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="@dimen/ten_dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/txt_edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:inputType="textPersonName"
                    android:paddingBottom="15dp"
                    android:hint="@string/add_name"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ten_dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="@dimen/ten_dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/txt_edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="15dp"
                    android:hint="@string/add_email"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ten_dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="@dimen/ten_dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:text="@string/phone_number"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/txt_edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:inputType="phone"
                    android:paddingBottom="15dp"
                    android:hint="@string/add_phone"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ten_dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="@dimen/ten_dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:text="@string/message"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/txt_edt_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:inputType="text"
                    android:paddingBottom="15dp"
                    android:hint="@string/add_message"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/btn_contact_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/submit"
                android:layout_marginStart="@dimen/normal"
                android:layout_marginEnd="@dimen/normal"
                android:textColor="@color/white"
                android:layout_marginBottom="30dp"
                android:background="@drawable/button_background_black"
                android:padding="@dimen/one_five"
                android:textSize="@dimen/text_size_18sp"
                android:layout_marginTop="@dimen/spaceing_large_x"
                />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>





</LinearLayout>