<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_margin="@dimen/ten_dp"
    >


    <ImageView
        android:id="@+id/pass_cancel"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="@dimen/one_five"
        android:src="@drawable/ic_cancel"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/normal"
        />


    <EditText
        android:id="@+id/edt_old_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xlarge"
        android:textColor="@color/black"
        android:inputType="text"
        android:hint="@string/enter_old_pass"
        android:layout_marginStart="@dimen/normal"
        android:layout_marginEnd="@dimen/normal"
        />

    <EditText
        android:id="@+id/edt_new_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xlarge"
        android:textColor="@color/black"
        android:inputType="text"
        android:hint="@string/create_new_password"
        android:layout_marginStart="@dimen/normal"
        android:layout_marginEnd="@dimen/normal"
        />


    <Button
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spaceing_large_x"
        android:layout_marginStart="@dimen/normal"
        android:layout_marginEnd="@dimen/normal"
        android:background="@drawable/button_background_black"
        android:text="@string/update"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_18sp"
        android:padding="@dimen/one_five"
        android:layout_marginBottom="@dimen/ten_dp"
        />


</LinearLayout>