<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.MyRidesActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        >


        <ImageView
            android:id="@+id/back_my_rides"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/ten_dp"
            android:padding="@dimen/five"
            android:layout_centerInParent="true"
            android:src="@drawable/back_black"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/my_rides"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18sp"
            />


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/normal"
        android:layout_marginEnd="@dimen/normal"
        android:layout_marginTop="@dimen/ten_dp"
        >

        <TextView
            android:id="@+id/tv_completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completed"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/five"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:padding="@dimen/ten_dp"
            />


        <View
            android:layout_width="1dp"
            android:layout_height="@dimen/normal"
            android:background="@color/lightGrey"
            android:layout_marginStart="@dimen/spaceing_large_x"
            android:layout_toEndOf="@+id/tv_completed"
            android:layout_centerVertical="true"
            />

        <TextView
            android:id="@+id/tv_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/scheduled"
            android:padding="@dimen/ten_dp"
            android:textColor="@color/gray"
            />


        <View
            android:layout_width="1dp"
            android:layout_height="@dimen/normal"
            android:layout_marginStart="@dimen/spaceing_large_x"
            android:layout_toEndOf="@+id/tv_schedule"
            android:background="@color/lightGrey"
            android:layout_centerVertical="true"
            />

        <TextView
            android:id="@+id/tv_cancelled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/five"
            android:layout_alignParentEnd="true"
            android:text="@string/cancelled"
            android:padding="@dimen/ten_dp"
            android:textColor="@color/gray"
            />


    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/one_five"
        android:background="@color/lightGrey"
        />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_ride_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        />


</LinearLayout>